change overflow overlay -> scroll to fix display issues in firefox

--- a/src/bob/_answer-insights.scss
+++ b/src/bob/_answer-insights.scss
@@ -39,7 +39,7 @@
         box-sizing: border-box;
         padding: 0.25em 0em;
         height: 100%;
-        overflow-y: overlay;
+        overflow-y: scroll;
         white-space: pre-line;
         overflow-wrap: break-word;
         -ms-overflow-style: none;
@@ -68,7 +68,7 @@
                 background: #6b6b6b;
             }
             max-height: 400px;
-            overflow-y: overlay;
+            overflow-y: scroll;
             overflow-wrap: break-word;
             white-space: pre-wrap;
             h4 {
