--- a/src/bob/_history-bookmarks.scss
+++ b/src/bob/_history-bookmarks.scss
@@ -6,7 +6,7 @@
         justify-content: end;
         //box-sizing: border-box;
         padding: 0.5em 0.4em;
-        overflow-y: overlay;
+        overflow-y: scroll;
         scrollbar-color: rgb(209, 209, 209) transparent;
         scrollbar-width: 0.25em;
         margin: 0.15em;
