--- a/src/bob/_news.scss
+++ b/src/bob/_news.scss
@@ -18,7 +18,7 @@
             
             box-sizing: border-box;
             padding: 0.25em 0.75em;
-            overflow-y: overlay;
+            overflow-y: scroll;
             scrollbar-color: rgb(209, 209, 209) transparent;
             scrollbar-width: 0.25em;
             margin: 0 0.15em;
